book/tests/snapshots/snapshot__@queries__dialect-and-version-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.mssql\n\nfrom employees\nsort age\ntake 10\n"
input_file: book/tests/prql/queries/dialect-and-version-1.prql
---
SELECT
  TOP (10) *
FROM
  employees
ORDER BY
  age
