book/tests/snapshots/snapshot__@queries__functions-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nfunc fahrenheit_to_celsius temp -> (temp - 32) / 1.8\n\nfrom cities\nderive temp_c = (fahrenheit_to_celsius temp_f)\n"
input_file: book/tests/prql/queries/functions-0.prql
---
SELECT
  *,
  (temp_f - 32) / 1.8 AS temp_c
FROM
  cities

