book/tests/snapshots/snapshot__@queries__functions-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "func interp low:0 high x -> (x - low) / (high - low)\n\nfrom students\nderive [\n  sat_proportion_1 = (sat_score | interp 1600),\n  sat_proportion_2 = (sat_score | interp low:0 1600),\n]\n"
input_file: book/tests/prql/queries/functions-2.prql
---
SELECT
  *,
  (sat_score - 0) / 1600 AS sat_proportion_1,
  (sat_score - 0) / 1600 AS sat_proportion_2
FROM
  students

