book/tests/snapshots/snapshot__@queries__functions-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "func fahrenheit_to_celsius temp -> (temp - 32) / 1.8\n\nfrom cities\nderive temp_c = (temp_f | fahrenheit_to_celsius)\n"
input_file: book/tests/prql/queries/functions-3.prql
---
SELECT
  *,
  (temp_f - 32) / 1.8 AS temp_c
FROM
  cities

