book/tests/snapshots/snapshot__@queries__functions-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "func fahrenheit_to_celsius temp -> (temp - 32) / 1.8\nfunc interp low:0 high x -> (x - low) / (high - low)\n\nfrom kettles\nderive boiling_proportion = (temp_c | fahrenheit_to_celsius | interp 100)\n"
input_file: book/tests/prql/queries/functions-4.prql
---
SELECT
  *,
  ((temp_c - 32) / 1.8 - 0) / 100 AS boiling_proportion
FROM
  kettles

