book/tests/snapshots/snapshot__@queries__header-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql version:\"0.3\"\n\nfrom employees\n"
input_file: book/tests/prql/queries/header-2.prql
---
SELECT
  *
FROM
  employees
