book/tests/snapshots/snapshot__@queries__pipelines-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\n"
input_file: book/tests/prql/queries/pipelines-0.prql
---
SELECT
  *
FROM
  employees

