book/tests/snapshots/snapshot__@queries__pipelines-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive gross_salary = (salary + payroll_tax)\n"
input_file: book/tests/prql/queries/pipelines-1.prql
---
SELECT
  *,
  salary + payroll_tax AS gross_salary
FROM
  employees

